// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders exchange 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noExchangeActivity
     
  </Text>
</View>
`;

exports[`renders home 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;

exports[`renders loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#42D689"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;
